# ec

./: .clang-format  CMakeLists.txt
include/ec/: filesystem.h  string.h  vector.h
include/ec/math/: common.h  matrix4.h  vector3.h
src/: filesystem.c  string.c  vector.c
src/math/: matrix4.c
